# jh

./: .gitignore  Pipfile  jh.conf  pyproject.toml  requirements.txt
data/: location.json
filemanager/: views.py
johukum/: admin.py  apps.py  context_processors.py  filters.py  form_tools.py  forms.py  models.py  tables.py  tests.py  urls.py  utils.py  views.py
johukum/apiv2/: fields.py  forms.py  serializers.py  urls.py  views.py
johukum/consumerapi_v1/: apps.py  forms.py  serializers.py  urls.py  views.py
johukum/frontend-src/: package-lock.json  package.json  webpack.config.js
johukum/migrations/: 0001_initial.py  0002_initial_data.py  0003_auto_20181002_0608.py  0004_auto_20181008_0506.py  0005_auto_20181008_0510.py  0006_auto_20181008_1214.py  0007_auto_20181009_0450.py  0008_auto_20181009_0636.py  0009_auto_20181009_1324.py  0010_contactnumber.py  0011_delete_contactnumber.py  0012_auto_20181010_1234.py  0013_auto_20190109_0600.py  0014_mobilenumberdata_email.py  0015_mobilenumberdata_land_line_numbers.py  0016_auto_20190109_1156.py  0017_mobilenumberdata_photos.py  0018_mobilenumberdata_keywords.py  0019_auto_20190121_0907.py  0020_auto_20190210_0956.py  0021_auto_20190227_1139.py  0022_category_display_name.py  0023_auto_20190411_0905.py  0024_auto_20191003_0908.py  0025_auto_20191004_0510.py  0026_auto_20191004_0513.py  0027_slider.py  0028_slider_name.py  0029_auto_20191120_1636.py  0030_auto_20191120_1646.py  0031_auto_20191120_1826.py  0032_user_varification_code.py  0033_auto_20191124_0917.py  (+3 more)
project/: settings.sample.py  settings_base.py  urls.py
(+122 files in other folders)
